--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h3>Работаю на судостроительном предприятии</h3>
     <span>Я люблю горы и играть на гитаре</span>
 
-    <img src="photos/ImP-ptoRln0.jpg" height="250px">
+    <img src="ImP-ptoRln0.jpg" height="250px">
 
     <a href="https://vk.com/video-100895191_456239811">Сплин - "Топай"</a>
 
